--- a/style.css
+++ b/style.css
@@ -211,4 +211,23 @@ body{
   background-repeat: no-repeat;
 }
 
+a{
+   text-decoration: none;
+   color: inherit;
+}
+.lien{
+   display: flex;
+   margin: auto;
+   font-size: 5px;
+   border-radius: 30px;
+   width: fit-content;
+   background-color: chartreuse ;
+   padding: 15px;
+}
+.lien:hover{
+  background-color: rgb(9, 226, 255) ;
+}
+img{
+  margin-left: 15px ;
+}
 
