--- a/style.css
+++ b/style.css
@@ -231,3 +231,16 @@ img{
   margin-left: 15px ;
 }
 
+table {
+  border-collapse: collapse;
+}
+
+th, td {
+  border: 1px solid rgb(255, 255, 255);
+  padding: 8px;
+}
+
+th {
+  background-color: rgb(0, 0, 0);
+}
+
